<resources>
    <string name="app_name">Enerwire Producción</string>
    <string name="label_login">LOGIN</string>
    <string name="label_user">Usuario</string>
    <string name="label_password">Password</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="btn_create_appointment">Ingresar Paro</string>
    <string name="btn_my_appointments">Ver Paros</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="label_create_stop">Ingresar Paro</string>
    <string name="label_code">Codigo de Paro</string>
    <string name="label_stop_type">Tipo de Paro</string>
    <string name="label_machine">Maquina</string>
    <string name="label_product">Producto</string>
    <string name="label_color">Color</string>
    <string name="label_meters">Metros Producidos</string>
    <string name="label_comments">Observaciones</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_confirm_stop_data">Resumen de Paro</string>
    <string name="label_start_datetime_stop">Fecha de Inicio Paro</string>
    <string name="label_end_datetime_stop">Fecha Fin Paro</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="error_loading_codes">Ocurrio un error al cargar los codigos de paro</string>
    <string name="dialog_create_stop_exit_title">Estas seguro que deseas salir?</string>
    <string name="dialog_create_stop_exit_message">Si abandonas el registro, los datos que habias ingresado se perderan.</string>
    <string name="dialog_create_stop_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_stop_exit_negative_btn">Continuar Registro</string>
    <string name="error_loading_machines">Ocurrio un error al cargar las Maquinas</string>
    <string name="error_loading_products">Ocurrio un error al cargar los Productos</string>
    <string name="error_loading_colors">Ocurrio un error al cargar los Colores</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son invalidas</string>
    <string name="error_empty_credentials">Por favor ingrese un usuario y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="label_my_stops">Mis Paros</string>
    <string name="item_stop_id">Numero de Paro #%1$d</string>
    <string name="item_stop_description">%1$d - %2$s</string>
    <string name="item_stop_date_start">Inicio el dia %1$s</string>
    <string name="item_stop_time_start">A las %1$s</string>
    <string name="item_stop_date_end">Finalizo el dia %1$s</string>
    <string name="item_stop_time_end">A las %1$s</string>
    <string name="create_stop_success">Paro Registrado Correctamente</string>
    <string name="create_stop_error">Ocurrio un error inesperado registrando el paro</string>
    <string name="spinner_title_code">Seleccionar Codigo de Paro</string>
    <string name="spinner_title_machine">Seleccionar Maquina</string>
    <string name="spinner_title_product">Seleccionar Producto</string>
    <string name="spinner_title_color">Seleccionar Color</string>
    <string name="require_code_text">Es necesario seleccionar el Codigo de Paro</string>
    <string name="require_machine_text">Es necesario selecionar la Maquina</string>
    <string name="require_product_text">Es necesario seleccionar el Producto</string>
    <string name="require_color_text">Es necesario seleccionar el Color</string>
    <string name="require_comment_text">Es necesario ingresar un Comentario</string>
    <string name="logo_image_description">Logo</string>

    <string name="menu_appbar_search_title">Buscar</string>
    <string name="menu_appbar_profile_title">Mi Perfil</string>
    <string name="menu_appbar_settings_title">Configuración</string>
    <string name="menu_appbar_help_title">Ayuda</string>
    <string name="menu_appbar_logout_title">Cerrar Sesión</string>
</resources>