<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_appbar_search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_appbar_profile_title" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_appbar_settings_title" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_appbar_help_title" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_appbar_logout_title"
        app:showAsAction="ifRoom"/>
</menu>